
1.1.0 release

	* deprecate support for adding torrents by HTTP URL
	* allow specifying which tracker to scrape in scrape_tracker
	* tracker response alerts from user initiated announces/scrapes are now
	  posted regardless of alert mask
	* improve DHT performance when changing external IP (primarily affects
	  bootstrapping).
	* add feature to stop torrents immediately after checking files is done
	* make all non-auto managed torrents exempt from queuing logic, including
	  checking torrents.
	* add option to not proxy tracker connections through proxy
	* removed sparse-regions feature
	* support using 0 disk threads (to perform disk I/O in network thread)
	* removed deprecated handle_alert template
	* enable logging build config by default (but alert mask disabled by default)
	* deprecated RSS API
	* experimental support for BEP 38, "mutable torrents"
	* replaced lazy_bdecode with a new bdecoder that's a lot more efficient
	* deprecate time functions, expose typedefs of boost::chrono in the
	  libtorrent namespace instead
	* deprecate file_base feature in file_storage/torrent_info
	* improve piece picker support for reverse picking (used for snubbed peers)
	  to not cause priority inversion for regular peers
	* improve piece picker to better support torrents with very large pieces
	  and web seeds. (request large contiguous ranges, but not necessarily a
	  whole piece).
	* deprecated session_status and session::status() in favor of performance
	  counters.
	* improve support for HTTP where one direction of the socket is shut down.
	* remove internal fields from web_seed_entry
	* separate crypto library configuration <crypto> and whether to support
	  bittorrent protocol encryption <encryption>
	* simplify bittorrent protocol encryption by just using internal RC4
	  implementation.
	* optimize copying torrent_info and file_storage objects
	* cancel non-critical DNS lookups when shutting down, to cut down on
	  shutdown delay.